2008-04-28 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/wms/Parser.java:
      Fixed parsing of capabilities without GetFeatureInfo section.

2008-04-27 mentaer <sstein@geo.unizh.ch>
	  added wms-default url to http://openaerialmap.org/wms/, bug [1944641]
	  
2008-04-27 mentaer <sstein@geo.unizh.ch>
	  translation for several files

2008-04-27 mentaer <sstein@geo.unizh.ch>
	  fixed bug [1729554] in extension manager
	  mod:  de.latlon.deejump.plugin.manager.ExtensionHelper.java
	  		language files
	  		
2008-04-05 mentaer <sstein@geo.unizh.ch>
	  added Auto Complete Polygon Tool from Uni Hannover via Malte W.
	  new: 	org.openjump.core.ui.plugin.edittoolbox.cursortools.AutoCompletePolygonCursorTool.java
	  		org.openjump.core.ui.plugin.edittoolbox.cursortools.AutoCompletePoly.gif
	  		org.openjump.core.ui.plugin.edittoolbox.AutoCompletePolygonPlugIn.java
	  mod:  org.openjump.OpenJumpConfiguration.java
	  		language files
	  
2008-04-06 mmichaud <michael.michaud@free.fr>
        * Added two plugins and updated language files
          com.vividsolutions.jump.workbench.JUMPConfiguration
             -> remove a MenuSeparator
          com.vividsolutions.jump.workbench.ui.MenuNames
             -> add the Synchronization menu
          com.vividsolutions.jump.workbench.ui.plugin.FeatureInstaller
             -> new method to add a JMenuItem subclass
          org.openjump.OpenJUMPConfiguration
             -> initialization of new plugins
          org.openjump.core.ui.plugin.window.MosaicInternalFramesPlugIn
             -> new PlugIn to make a mosaic with internal frames
          org.openjump.core.ui.plugin.window.SynchronizationPlugIn
             -> new PlugIn to synchronize every frame containing viewpanel

2008-04-05 mentaer <sstein@geo.unizh.ch>

           **** release of OpenJUMP 1.2 (Release F) ****
                
2008-04-05 mentaer <sstein@geo.unizh.ch>
	  Replaced throwing of XMLBinder Exception by writing of error message 